[gd_scene load_steps=9 format=3 uid="uid://44rt4llhx727"]

[ext_resource type="Script" path="res://scenes/ui/loading_screen.gd" id="1_mlo8p"]
[ext_resource type="PackedScene" uid="uid://doqa6vjfcdi1a" path="res://scenes/ui/sound_button.tscn" id="2_3brit"]
[ext_resource type="Shader" path="res://resources/shaders/water.gdshader" id="2_hh8r5"]
[ext_resource type="Texture2D" uid="uid://d1saoawy2e1te" path="res://assets/images/square.png" id="3_ewly3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m2bjy"]
shader = ExtResource("2_hh8r5")
shader_parameter/WATER_COL = Color(0.176471, 0.635294, 0.85098, 1)
shader_parameter/WATER2_COL = Color(0.0588235, 0.529412, 0.776471, 1)
shader_parameter/FOAM_COL = Color(0.87451, 0.988235, 1, 1)
shader_parameter/distortion_speed = 1.0
shader_parameter/tile = Vector2(1, 1)
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_aayyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n08g7"]
resource_name = "loading"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b2jnx"]
_data = {
"RESET": SubResource("Animation_aayyu"),
"loading": SubResource("Animation_n08g7")
}

[node name="LoadingScreen" type="Node"]
script = ExtResource("1_mlo8p")

[node name="BackgroundShaderedSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m2bjy")
position = Vector2(1346, 905)
scale = Vector2(400, 200)
texture = ExtResource("3_ewly3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" parent="MarginContainer" instance=ExtResource("2_3brit")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 42
text = "Continue"

[node name="LoadingLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Loading..."

[node name="LoadingSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1203, 692)
scale = Vector2(4, 4)
texture = ExtResource("3_ewly3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loading"
libraries = {
"": SubResource("AnimationLibrary_b2jnx")
}
